# near-aurora-bridge

./: .gitignore  readme.md
.github/workflows/: README.md  automated-release.yml  integration-tests.yml  kill-container.yml  single-node-runner-builder.yml  single-node-runner-tester.yml  single-node-runner.yml
deploy/aurora-local/: Dockerfile  docker-compose.yml  readme.md
deploy/aurora-local-rainbow-bridge/: Dockerfile  docker-compose.yml
deploy/aurora-local-rainbow-bridge/scripts/: deploy_aurora.sh
deploy/aurora-local/config/: localnet.yaml  readme.md
deploy/aurora-local/near_home/localnet/node0/: config.json  genesis.json
deploy/aurora-local/near_home/localnet/node1/: config.json  node_key.json  validator_key.json
deploy/aurora-local/near_home/localnet/node2/: config.json  node_key.json  validator_key.json
deploy/aurora-local/scripts/: docker_prepare.sh  run.sh
deploy/single-node-runner/: Dockerfile  docker-compose.yml  readme.md
deploy/single-node-runner-rinkeby/: Dockerfile  docker-compose.yml  readme.md
deploy/single-node-runner-rinkeby/gravity_home/: orchestrator_key.json  validator_key.json
deploy/single-node-runner-rinkeby/gravity_home/config/: genesis.json  node_key.json  priv_validator_key.json
deploy/single-node-runner-rinkeby/gravity_home/keyring-test/: val.info
deploy/single-node-runner-rinkeby/scripts/: deploy-contract.sh  init-gravity.sh  run.sh
deploy/single-node-runner-testnet/: Dockerfile  docker-compose.yml  readme.md
deploy/single-node-runner-testnet/nab_home/: orchestrator_key.json  validator_key.json
deploy/single-node-runner-testnet/nab_home/config/: config.toml  genesis.json  node_key.json  priv_validator_key.json
deploy/single-node-runner-testnet/nab_home/keyring-test/: val.info
deploy/single-node-runner-testnet/scripts/: deploy-contract.sh  init-nab.sh  run.sh
deploy/single-node-runner/scripts/: init.sh  run.sh
docs/design/: messages.md  oracle.md  parameters.md
docs/developer/: code-structure.md  environment-setup.md  gravity-to-near-migration-steps.md  hotspots.md
module/: Makefile  go.mod
module/app/: app.go  encoding.go  export.go  sim_test.go  utils.go
module/cmd/nab/: main.go
module/cmd/nab/cmd/: gentx.go  root.go
module/contrib/local/: protocgen.sh
module/proto/nab/v1/: attestation.proto  batch.proto  ethereum_signer.proto  genesis.proto  msgs.proto  pool.proto  query.proto  types.proto
module/x/gravity/keeper/: attestation_handler.go  keeper.go  keeper_test.go
module/x/gravity/types/: batch.pb.go  genesis.go  genesis.pb.go  msgs.pb.go  query.pb.go  types.pb.go
module/x/nab/: abci.go  abci_test.go  cosmos-originated_test.go  handler.go  handler_test.go  module.go
module/x/nab/keeper/: attestation.go  attestation_handler.go  attestation_test.go  batch.go  batch_test.go  cosmos-originated.go  evidence.go  evidence_test.go  genesis.go  grpc_query.go  keeper.go  keeper_batch.go  keeper_delegate_key.go  keeper_logic_call.go  keeper_test.go  keeper_valset.go  msg_server.go  pool.go  pool_test.go  querier.go  querier_test.go  test_common.go
module/x/nab/spec/: 04_messages.md
module/x/nab/types/: attestation.pb.go  batch.pb.go  codec.go  ethereum_signer.pb.go  genesis.pb.go  genesis_test.go  key.go  msgs.pb.go  msgs.pb.gw.go  pool.pb.go  query.pb.go  query.pb.gw.go  types.pb.go
orchestrator/: Cargo.toml
orchestrator/cosmos_gravity/: Cargo.toml
orchestrator/cosmos_gravity/src/: query.rs  send.rs  utils.rs
orchestrator/ethereum_gravity/: Cargo.toml
orchestrator/ethereum_gravity/src/: deploy_erc20.rs  logic_call.rs  message_signatures.rs  send_to_cosmos.rs  submit_batch.rs  utils.rs  valset_update.rs
orchestrator/ethereum_gravity/src/test_cases/: valset_update_test.rs
orchestrator/gbt/: Cargo.toml
orchestrator/gbt/src/: args.rs  config.rs  get_gravity_test.md  get_gravity_test.rs  keys.rs  main.rs  orchestrator.rs  relayer.rs
orchestrator/gbt/src/client/: cosmos_to_eth.rs  deploy_erc20_representation.rs  eth_to_cosmos.rs
orchestrator/gbt/src/keys/: register_orchestrator_address.rs
orchestrator/gravity_proto/src/: lib.rs
orchestrator/gravity_proto/src/prost/: nab.v1.rs
orchestrator/gravity_utils/: Cargo.toml
orchestrator/gravity_utils/src/: connection_prep.rs  error.rs  get_with_retry.rs
orchestrator/gravity_utils/src/types/: batches.rs  ethereum_events.rs  logic_call.rs  valsets.rs
orchestrator/nabt/: Cargo.toml
orchestrator/nabt/src/: args.rs  config.rs  keys.rs  main.rs  orchestrator.rs  relayer.rs
orchestrator/nabt/src/client/: eth_to_cosmos.rs
orchestrator/nabt/src/keys/: register_orchestrator_address.rs
orchestrator/orchestrator/: Cargo.toml
orchestrator/orchestrator/src/: ethereum_event_watcher.rs  lib.rs  main_loop.rs  oracle_resync.rs  oracle_resync_test.rs
orchestrator/orchestrator/src/eth_logs/: aurora_eth_log.json  encoded_events.md  frash_deployment.md  rinkeby_eth_log.json
orchestrator/proto_build/src/: main.rs
orchestrator/relayer/: Cargo.toml
orchestrator/relayer/src/: batch_relaying.rs  logic_call_relaying.rs  main_loop.rs  valset_relaying.rs
orchestrator/scripts/: build-release.sh
orchestrator/test_runner/: Cargo.toml
orchestrator/test_runner/src/: bootstrapping.rs  evidence_based_slashing.rs  happy_path.rs  happy_path_v2.rs  main.rs  relay_market.rs  transaction_stress_test.rs  tx_cancel.rs  utils.rs  valset_rewards.rs
orchestrator/web30/: Cargo.toml
orchestrator/web30/src/: types.rs
solidity/: Gravity.json  contract-deployer.ts  gravity-deployer.ts
solidity/contracts/: Gravity.sol  TestERC20WNOM.sol
solidity/scripts/: contract-deployer.sh  get-valset.ts
solidity/test/: sendToCosmos.ts
solidity/test-utils/: index.ts
tests/: all-up-test.sh  build-container.sh  run-all-tests.sh  run-eth-fork.sh  run-eth.sh  run-solidity-test-fork.sh  run-tests.sh  start-chains.sh
tests/aurora/: aurora.node0.json  keys_readme.md
tests/container-scripts/: all-up-test-internal.sh  integration-tests.sh  reload-code.sh  run-eth.sh  run-testnet.sh  setup-validators.sh
tests/dockerfile/: Dockerfile  base.Dockerfile  readme.md
(+10 files in other folders)
