[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
name = "cosmos_gravity"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_gravity = {path = "../ethereum_gravity"}
gravity_proto = {path = "../gravity_proto/"}
gravity_utils = {path = "../gravity_utils"}

clarity = "0.5"
deep_space = "2.4"
log = "0.4"
num256 = "0.3"
prost-types = "0.7"
serde = "1.0"
sha3 = "0.9"
tokio = {version = "1.4", features = ["macros", "rt-multi-thread"]}
tonic = "0.4"
web30 = {git = "https://github.com/onomyprotocol/web30.git", rev = "7dd3533a3690a54c56ec79f72df2c8f6c858625b"}

[dev-dependencies]
env_logger = "0.9"
rand = "0.8"
