[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
name = "ethereum_gravity"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_utils = {path = "../gravity_utils"}

clarity = "0.5"
deep_space = "2.4"
log = "0.4"
num256 = "0.3"
sha3 = "0.9"
web30 = {git = "https://github.com/onomyprotocol/web30.git"}

[dev_dependencies]
rand = "0.8"
