[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
description = "Gravity Bridge Tools. User tooling for the Althea Ethereum <=> Cosmos Gravtiy bridge"
edition = "2018"
homepage = "https://gravitybridge.althea.net/"
license = "Apache-2.0"
name = "gbt"
repository = "https://github.com/althea-net/cosmos-gravity-bridge"
version = "0.5.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2"
clap = "3.0.0-beta.2"
clarity = "0.4"
cosmos_gravity = {path = "../cosmos_gravity"}
deep_space = "2.4"
dirs = "3.0"
env_logger = "0.9"
ethereum_gravity = {path = "../ethereum_gravity"}
gravity_proto = {path = "../gravity_proto/"}
gravity_utils = {path = "../gravity_utils"}
lazy_static = "1"
log = "0.4"
openssl-probe = "0.1"
orchestrator = {path = "../orchestrator/"}
rand = "0.8"
relayer = {path = "../relayer/"}
serde = "1.0"
serde_derive = "1.0"
tokio = "1.4"
toml = "0.5"
url = "2"
web30 = "0.15"
