[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
name = "gravity_utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clarity = "0.4"
deep_space = "2.4"
gravity_proto = {path = "../gravity_proto/"}
log = "0.4"
num-bigint = "0.4"
num256 = "0.3"
serde = "1.0"
serde_derive = "1.0"
sha3 = "0.9"
thiserror = "1.0.30"
tokio = "1.4"
tonic = "0.4"
url = "2"
web30 = "0.15"

[dev_dependencies]
actix = "0.12"
rand = "0.8"
