[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
name = "test_runner"
version = "0.1.0"

# only becuase I like - more in names
[[bin]]
name = "test-runner"
path = "src/main.rs"

[dependencies]
bytes = "1"
clarity = "0.5"
cosmos_gravity = {path = "../cosmos_gravity"}
deep_space = "2.4"
docopt = "1"
env_logger = "0.9"
ethereum_gravity = {path = "../ethereum_gravity"}
futures = "0.3"
gravity_proto = {path = "../gravity_proto/"}
gravity_utils = {path = "../gravity_utils"}
lazy_static = "1"
log = "0.4"
num256 = "0.3"
orchestrator = {path = "../orchestrator/"}
prost = "0.7"
prost-types = "0.7"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = {version = "1.4", features = ["macros", "rt-multi-thread"]}
tonic = "0.4"
url = "2"
web30 = {git = "https://github.com/onomyprotocol/web30.git", rev = "7dd3533a3690a54c56ec79f72df2c8f6c858625b"}
